--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Projeto_2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Projeto_2 main.cpp)
+add_executable(Projeto_2 main.cpp
+        Logic/Graph.h)
